--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   background: #E5EFF1;
 }
 
-body, h1, .search-bar {
+body, h1, .search-bar, button {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
   font-weight: 300;
 }
@@ -33,10 +33,26 @@ p {
 .search-bar {
   font-size: 1em;
   line-height: 2em;
+  border: none;
+  border-radius: 15px 0 0 15px;
   border: 1px solid #eee;
-  border-radius: 20px;
+  /* border-radius: 20px; */
   margin: 10px auto;
   padding: 0 20px;
   width: 100%;
   max-width: 320px;
+}
+
+.gif-search {
+  background: #f8f8f8;
+  font-size: 1em;
+  line-height: 2em;
+  padding: 0 20px;
+  border: 1px solid #eee;
+  border-radius: 0 15px 15px 0;
+  cursor: pointer;
+}
+
+.gif-search:hover {
+  background: #ccc;
 }
